// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base.jsx 1`] = `
<DocumentFragment>
  <span
    class="t-trigger"
  >
    <button
      class="t-button t-button--theme-default t-button--variant-text"
      type="button"
    >
      <span
        class="t-button__text"
      >
        更多
      </span>
      <span
        class="t-button__suffix"
      >
        <svg
          class="t-icon t-icon-chevron-down"
        >
          <use
            xlink:href="#t-icon-chevron-down"
          />
        </svg>
      </span>
    </button>
  </span>
</DocumentFragment>
`;

exports[`button.jsx 1`] = `
<DocumentFragment>
  <span
    class="t-trigger"
  >
    <button
      class="t-button t-button--theme-default t-button--variant-outline"
      type="button"
    >
      <span
        class="t-button__text"
      >
        <svg
          class="t-icon t-icon-ellipsis"
        >
          <use
            xlink:href="#t-icon-ellipsis"
          />
        </svg>
      </span>
    </button>
  </span>
</DocumentFragment>
`;

exports[`child.jsx 1`] = `
<DocumentFragment>
  <span
    class="t-trigger"
  >
    <button
      class="t-button t-button--theme-default t-button--variant-text"
      type="button"
    >
      <span
        class="t-button__text"
      >
        更多
      </span>
      <span
        class="t-button__suffix"
      >
        <svg
          class="t-icon t-icon-chevron-down"
        >
          <use
            xlink:href="#t-icon-chevron-down"
          />
        </svg>
      </span>
    </button>
    <div>
      <ul>
        <li
          class="t-dropdown__item--theme-default"
          style="max-width: NaNpx; min-width: NaNpx;"
        >
          操作一
          <div>
            <ul>
              <li
                class="t-dropdown__item--theme-default"
                style="max-width: NaNpx; min-width: NaNpx;"
              >
                操作1-1
                <div>
                  <ul>
                    <li
                      class="t-dropdown__item--theme-default"
                      style="max-width: NaNpx; min-width: NaNpx;"
                    >
                      操作1-1-1
                    </li>
                    <li
                      class="t-dropdown__item--theme-default"
                      style="max-width: NaNpx; min-width: NaNpx;"
                    >
                      操作1-1-2
                    </li>
                  </ul>
                </div>
              </li>
              <li
                class="t-dropdown__item--theme-default"
                style="max-width: NaNpx; min-width: NaNpx;"
              >
                操作1-2
              </li>
            </ul>
          </div>
        </li>
        <li
          class="t-dropdown__item--theme-default"
          style="max-width: NaNpx; min-width: NaNpx;"
        >
          操作二
          <div>
            <ul>
              <li
                class="t-dropdown__item--theme-default"
                style="max-width: NaNpx; min-width: NaNpx;"
              >
                操作2-1
                <div>
                  <ul>
                    <li
                      class="t-dropdown__item--theme-default"
                      style="max-width: NaNpx; min-width: NaNpx;"
                    >
                      操作2-1-1
                    </li>
                    <li
                      class="t-dropdown__item--theme-default"
                      style="max-width: NaNpx; min-width: NaNpx;"
                    >
                      操作2-1-2
                    </li>
                  </ul>
                </div>
              </li>
              <li
                class="t-dropdown__item--theme-default"
                style="max-width: NaNpx; min-width: NaNpx;"
              >
                操作2-2
              </li>
            </ul>
          </div>
        </li>
      </ul>
    </div>
  </span>
</DocumentFragment>
`;

exports[`click.jsx 1`] = `
<DocumentFragment>
  <span
    class="t-trigger"
  >
    <button
      class="t-button t-button--theme-primary t-button--variant-base"
      type="button"
    >
      <span
        class="t-button__text"
      >
        hover我试试
      </span>
    </button>
  </span>
</DocumentFragment>
`;

exports[`custom.jsx 1`] = `
<DocumentFragment>
  <span
    class="t-trigger"
  >
    <button
      class="t-button t-button--theme-primary t-button--variant-base"
      type="button"
    >
      <span
        class="t-button__text"
      >
        点击我试试
      </span>
    </button>
  </span>
</DocumentFragment>
`;

exports[`disabled.jsx 1`] = `
<DocumentFragment>
  <span
    class="t-trigger"
  >
    <button
      class="t-button t-button--theme-default t-button--variant-text"
      type="button"
    >
      <span
        class="t-button__text"
      >
        更多
      </span>
      <span
        class="t-button__suffix"
      >
        <svg
          class="t-icon t-icon-chevron-down"
        >
          <use
            xlink:href="#t-icon-chevron-down"
          />
        </svg>
      </span>
    </button>
  </span>
</DocumentFragment>
`;

exports[`long.jsx 1`] = `
<DocumentFragment>
  <span
    class="t-trigger"
  >
    <button
      class="t-button t-button--theme-primary t-button--variant-base"
      type="button"
    >
      <span
        class="t-button__text"
      >
        hover我试试
      </span>
    </button>
  </span>
</DocumentFragment>
`;

exports[`multiple.jsx 1`] = `
<DocumentFragment>
  <span
    class="t-trigger"
  >
    <button
      class="t-button t-button--theme-default t-button--variant-outline"
      type="button"
    >
      <span
        class="t-button__text"
      >
        <svg
          class="t-icon t-icon-ellipsis"
        >
          <use
            xlink:href="#t-icon-ellipsis"
          />
        </svg>
      </span>
    </button>
  </span>
</DocumentFragment>
`;

exports[`split.jsx 1`] = `
<DocumentFragment>
  <span
    class="t-trigger"
  >
    <button
      class="t-button t-button--theme-default t-button--variant-text"
      type="button"
    >
      <span
        class="t-button__text"
      >
        更多
      </span>
      <span
        class="t-button__suffix"
      >
        <svg
          class="t-icon t-icon-chevron-down"
        >
          <use
            xlink:href="#t-icon-chevron-down"
          />
        </svg>
      </span>
    </button>
  </span>
</DocumentFragment>
`;
